[package]
name = "bolt11"
version = "0.1.0"
authors = ["Johann Ortiz <johann@stampery.com>"]
license = "MIT"
readme = "README.md"
keywords = ["bolt11", "bitcoin", "lightning", "invoice", "payment"]
repository = "https://github.com/kronolynx/bolt11-rust"
description = "Lightning Network BOLT11 Implementation (Payment Requests)"

[dependencies]
num = "0.1.41"
itertools = "0.7.6"
hex="0.3.1"
base58check = "0.0.1"
lazy_static = "1.0"
byteorder = "1.2.1"
libsecp256k1 = "0.1.13"
rust-crypto = "0.2.36"
bitcoin-bech32 = "0.3.1"


